--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -25,7 +25,7 @@ jobs:
         git config --global pull.rebase false
         git config --global --list
     - name: Load upstream commits
-      run: git pull https://github.com/binary-husky/chatgpt_academic.git.git --log --no-commit
+      run: git pull https://github.com/binary-husky/chatgpt_academic.git --log --no-commit
       
     - name: Apply commit changes
       run: |
